--- a/slides/chapter-1-significance.Rmd
+++ b/slides/chapter-1-significance.Rmd
@@ -358,7 +358,7 @@ Some evidence* suggests that novice players are less likely to choose scissors.
 .bottom[\*[See Eyler et al., 2009](https://www.jstor.org/stable/pdf/25653686.pdf)]
 
 ].pull-right[
-![rock paper scissors graphic](rock_paper_scissors.png)
+![rock paper scissors graphic](figure/rock_paper_scissors.png)
 ]
 
 
@@ -408,7 +408,7 @@ Play $n$ rounds, recording 0 or 1, where 1 = scissors was played
 </math>
 
 .toprightfig[
-![rock paper scissors graphic](rock_paper_scissors.png)
+![rock paper scissors graphic](figure/rock_paper_scissors.png)
 ]
 ---
 ## Rock Paper Scissors
@@ -491,14 +491,14 @@ Play $n$ rounds, recording 0 or 1, where 1 = scissors was played
 </math>
 
 .toprightfig[
-![rock paper scissors graphic](rock_paper_scissors.png)
+![rock paper scissors graphic](figure/rock_paper_scissors.png)
 ]
 
 
 ---
 ## Rock Paper Scissors
 .toprightfig[
-![rock paper scissors graphic](rock_paper_scissors.png)
+![rock paper scissors graphic](figure/rock_paper_scissors.png)
 ]
 
 - Is $\hat p_{scissors}$ less than the probability specified in the null hypothesis?<br/>    
@@ -544,7 +544,7 @@ If you have done the modeling correctly, you'll still be wrong $(100\times p)$% 
 ---
 ## Rock Paper Scissors
 .toprightfig[
-![rock paper scissors graphic](rock_paper_scissors.png)
+![rock paper scissors graphic](figure/rock_paper_scissors.png)
 ]
 
 3 S Strategy:
@@ -556,7 +556,7 @@ If you have done the modeling correctly, you'll still be wrong $(100\times p)$% 
 
 2. Simulation: .red["coin flip" with p(heads) = 1/3]
 .pull-left[.small[Actual coins don't work, but we could use dice - rolls of 1 or 2 represent scissors... or we could let the computer do it for us using the <br/>[**One Proportion** applet](http://www.rossmanchance.com/ISIapplets.html)]]
-.pull-right[<img alt="Rock paper scissors simulation result" src="rock-paper-scissors-simulation.png"/>]
+.pull-right[<img alt="Rock paper scissors simulation result" src="figure/rock-paper-scissors-simulation.png"/>]
 <br/>
 3. Strength of evidence:
 .red[
@@ -646,7 +646,7 @@ $$\underbrace{P(x \leq 2)} \approx P(x^\ast \leq 2) =  \frac{193}{1000} = .193$$
 ---
 ## Rock Paper Scissors
 .toprightfig[
-![rock paper scissors graphic](rock_paper_scissors.png)
+![rock paper scissors graphic](figure/rock_paper_scissors.png)
 ]
 
 
@@ -1026,7 +1026,7 @@ class:center,middle,inverse
 
 .bottom[[Link to full study](https://www.researchgate.net/publication/5760749)]
 
-![Two male faces](Tim_Bob.png)
+![Two male faces](figure/Tim_Bob.png)
 
 .center[Is the man on the left named Tim or Bob?]
 
