--- a/slides/chapter-3-estimation.Rmd
+++ b/slides/chapter-3-estimation.Rmd
@@ -28,7 +28,7 @@ theme_set(theme_bw())
 .pull-left[
 .large[By Date]
 
-- February 18: [start](#3) - [end](#10)
+- February 18: [start](#3) - [end](#13)
 
 ]
 .pull-right[
@@ -74,7 +74,7 @@ Can dogs sniff out cancer? Marine the labrador was presented with a bag breathed
 ---
 ## Example 3.1 - Dogs Smell Cancer
 
-Marine guessed correctly in 32/33 trials.  $\hat p = .909$ 
+Marine guessed correctly in 32/33 trials.  $\hat p = .969$ 
 
 - Test the hypothesis that $\pi = 0.2$ (random chance)    
 <br/><br/><br/>
@@ -111,57 +111,91 @@ H | 0.96 |
 ---
 ## Visual Confidence Interval
 
-```{r}
+```{r, ffmpeg.format='gif', fig.show='animate', dev = "jpeg", dpi = 300}
 
-function(ptest) {
-  ps <- seq(0, 1, .001)
-  se <- sqrt((32/33*1/33)/33)
-  dlow <- ptest - abs(ptest - 32/33)
-  dhigh <- ptest + abs(ptest - 32/33)
+show_p_test <- function(idx, ptest, sample_p = 32/33, sample_n = 33) {
+  ps <- seq(.5, 1, .001)
+  se <- sqrt((sample_p*(1 - sample_p))/sample_n)
+  ptestres <- pnorm(32/33, ptest, se, lower.tail = F) * 2
+  ptestbin <- c("Reject", "Fail to Reject")[1 + as.numeric(ptestres > 0.05)]
   
-  ggplot() + geom_line(aes(x = ps, y = dnorm(ps, mean = ptest, sd = se))) + 
-    geom_area()
+  dlow <- ptest[idx] - abs(ptest[idx] - sample_p)
+  dhigh <- ptest[idx] + abs(ptest[idx] - sample_p)
+
+  plot <- ggplot() + geom_line(aes(x = ps, y = dnorm(ps, mean = ptest[idx], sd = se))) +
+    geom_area(aes(x = ps[ps <= dlow], y = dnorm(ps[ps <= dlow], mean = ptest[idx], sd = se)), fill = "grey") + 
+    geom_area(aes(x = ps[ps >= dhigh], y = dnorm(ps[ps >= dhigh], mean = ptest[idx], sd = se)), fill = "grey") + 
+    geom_vline(aes(xintercept = sample_p, color = "Sample p")) +
+    geom_point(aes(x = ptest[1:idx], y = -.1, color = ptestbin[1:idx]), size = 2) + 
+    scale_colour_manual("Decision", values = c("Sample p" = "red", "Reject" = "orange", "Fail to Reject" = "blue"), na.val = "grey", drop = F) + 
+    scale_y_continuous("Density") + scale_x_continuous("Proportion")
+  print(plot)
 }
-
-ps <- seq(0, 1, .001)
-ph <- .75
-se <- sqrt(32/33*1/33/33)
-ggplot() + 
-  geom_line(aes(x = ps, y = dnorm(ps, mean = ph, sd = se))) + 
-  geom_vline(aes(xintercept = 32/33, color = "Sample prop")) +
-  geom_point(aes(x = ph, y = 0, color = "reject"))
-
-ph <- .78
-ggplot() + 
-  geom_line(aes(x = ps, y = dnorm(ps, mean = ph, sd = se))) + 
-  geom_vline(aes(xintercept = 32/33, color = "Sample prop")) +
-  geom_point(aes(x = .75, y = 0, color = "reject")) +
-  geom_point(aes(x = .78, y = 0, color = "reject"))
-
-ph <- .81
-ggplot() + 
-  geom_line(aes(x = ps, y = dnorm(ps, mean = ph, sd = se))) + 
-  geom_vline(aes(xintercept = 32/33, color = "Sample prop")) +
-  geom_point(aes(x = .75, y = 0, color = "reject")) +
-  geom_point(aes(x = .78, y = 0, color = "reject")) +
-  geom_point(aes(x = .81, y = 0, color = "reject"))
-
-ph <- .81
-ggplot() + 
-  geom_line(aes(x = ps, y = dnorm(ps, mean = ph, sd = se))) + 
-  geom_vline(aes(xintercept = 32/33, color = "Sample prop")) +
-  geom_point(aes(x = .75, y = 0, color = "reject")) +
-  geom_point(aes(x = .78, y = 0, color = "reject")) +
-  geom_point(aes(x = .81, y = 0, color = "reject"))
-
-xx <- c(0, 1, 32, 33)
-purrr::map_df(seq(0, 1, .01), function(x) tibble(orig = x, p = mean(rbinom(1000, 33, x) %in% xx))) %>%
-ggplot() + 
-  geom_vline(aes(xintercept = 32/33, color = "Sample proportion")) + 
-  geom_point(aes(x = orig, y = 0, color = p < 0.05)) 
-  
+ptest <- seq(.8, 1, .015)
+steps <- length(ptest)
+purrr::walk(1:steps, show_p_test, ptest = ptest)
 
 ```
+
+- Wherever we fail to reject is an interval of plausible values for $\pi$
+
+- 95% confidence interval for $\pi$ interpretation:    
+We are 95% confident that our true parameter value falls within our confidence interval
+
+- Found by obtaining parameter values that fail to be rejected by a two-sided test of significance with 0.05 level
+
+---
+## Changing Significance Level
+
+- We've been rejecting tests with significance level 0.05
+
+- If we change and reject at 0.01 instead, what happens?
+
+  - we reject $H_0$ when it is true 1% of the time
+  - p-values have to be smaller before we reject<br/><br/>
+--
+
+.red[Thus, we're rejecting] $H_0$ .red[less frequently]    
+If our p-value is 0.03, we would have rejected at $\alpha = 0.05$ but now we fail to reject
+<br/><br/>
+--
+
+  - What happens to the interval? <br/><br/>
+--
+
+.red[It gets wider]
+
+---
+## Changing Significance Level
+
+- As significance level $\alpha$ goes down...
+  - We reject less often
+  - We fail to reject more often
+  - We have more plausible values
+  - Our confidence interval is wider
+
+- As significance level $\alpha$ increases...
+  - We reject more often
+  - We fail to reject less often
+  - We have fewer plausible values
+  - Our confidence interval is narrower
+
+- *Confidence level* **increases** when *significance level* **decreases**
+
+---
+## Example: Lottery tickets
+
+We want to try to win the lottery and have to decide how many tickets to buy. 
+
+To be more confident that we will win, should we buy more tickets or less tickets?
+
+--
+
+.red[More confidence -> need to buy more tickets to have a higher chance of winning]
+
+--
+
+When we're constructing a confidence interval, we need to include more values in the interval to have higher confidence.
 
 ---
 ## Exploration 3.1
@@ -170,81 +204,7 @@ Most people are right-dominant. In a study reported in Nature (2003), researcher
 
 In groups, identify the observational units, variable of interest, and whether the variable is categorical or quantitative. 
 
----
-## Exploration 3.1
-
-The researchers observed that 80/124 couples leaned right.
-
-Let $\pi$ denote the proportion of all kissing couples that turn their heads to the right.
-
-- Is $\pi$ a parameter or a statistic?
-
-- Do we know the value of $\pi$?
-
-- Calculate $\hat p$
-
-- State the hypotheses:
-
-
----
-## Exploration 3.1
-
-Conduct a simulation for the previously stated hypotheses. Report the p-value and state your conclusion.
-
-
----
-## Exploration 3.1
-
-We have evidence that the true proportion of couples who lean right is not 0.5. Maybe it's 0.6?
-
-Test $H_0: \pi=0.6$
-
-
----
-## Exploration 3.1
-
-Suppose we want to estimate the long-run proportion of couples who lean their head to the right while kissing. 
-
-- Would 0.5 be in your 95% confidence interval? Why or why not?
-
-- Would 0.6 be in your 95% confidence interval? Why or why not?
-
-- Use the applet to try different values and determine where the lower and upper cutoffs are for your confidence interval.
-
-
----
-## Exploration 3.1
-
-.pull-left[
-Lower Bound: 
-
-P under $H_0$ | 2-sided p-value | Conclusion
-------------- | --------------- | ----------
-0.54 | | 
-0.55 | | 
-0.56 | | 
-0.57 | | 
-0.58 | | 
-0.59 | | 
-]
-
-.pull-right[
-Upper Bound: 
-
-P under $H_0$ | 2-sided p-value | Conclusion
-------------- | --------------- | ----------
-0.71 | |
-0.72 | |
-0.73 | |
-0.74 | |
-0.75 | |
-0.76 | |
-]
-
----
-## Exploration 3.1
-
-Interpret your confidence interval in the context of the scenario:
+Work through questions 3-13 from the exploration in groups, then discuss questions 14-18. Upload the pdf of your responses as a group.
 
 
 ---
@@ -414,4 +374,323 @@ Conf Level | Interval
 - Notice the 95% interval is close to what we found with the 2 SE method
   - 2 is quick and easy as a multiplier
   - 95% actually uses a multiplier of 1.96
+
+---
+## Review
+
+- Confidence Intervals
+  - Purpose: to find a range of **plausible** values for our parameter
   
+  - General Formula breakdown: .hidden[ $$\text{statistic}\pm \text{multiplier}\times\text{margin of error}$$ ]
+  
+- Concepts:
+  - Where does the CI come from?    
+  .hidden[many separate hypothesis tests of different values]
+  
+  - What affects the width?    
+  .hidden[the confidence level and the margin of error]
+  
+  - How do we know what the p-value will be just from the confidence interval and a set of hypotheses?    
+  .hidden[If the interval contains the null hypothesis value, the p-value will be above our significance level. If not, the p-value will be below our significance level.]
+
+---
+## Introduction
+
+- Confidence Intervals
+  - Purpose: to find a range of **plausible** values for our parameter
+  
+  - General Formula breakdown: $$\text{statistic}\pm \text{multiplier}\times\text{margin of error}$$
+  
+- Concepts:
+  - Where does the CI come from?    
+  .red[many separate hypothesis tests of different values]
+  
+  - What affects the width?    
+  .red[the confidence level and the margin of error]
+  
+  - How do we know what the p-value will be just from the confidence interval and a set of hypotheses?    
+  .red[If the interval contains the null hypothesis value, the p-value will be above our significance level. If not, the p-value will be below our significance level.]
+    
+
+---
+## Multipliers
+
+The multiplier is a constant that indicates the number of standard deviations in a normal curve. 
+
+The larger the multiplier, the higher the confidence level. 
+
+.pull-left[
+
+<img alt="Normal distribution: area under the curve within 1, 2, and 3 standard deviations from the mean" src="figure/empirical_rule.png" width="100%"/>
+
+].pull-right[.center[
+
+Confidence | Multiplier
+---------- | ----------
+80% | `r sprintf("%.2f", qnorm(.9))`
+90% | `r sprintf("%.2f", qnorm(.95))`
+95% | `r sprintf("%.2f", qnorm(.975))`
+99% | `r sprintf("%.2f", qnorm(.995))`
+
+]]
+
+The confidence level is the percentage of area under the curve between the two values.
+
+---
+## Proportions
+
+- Validity conditions: .hidden[10 observations in each category]
+
+- Standard error: .hidden[$$\sqrt{\frac{\hat p (1 - \hat p)}{n}}$$]
+
+- Confidence interval: (multiplier of 2 for 95% confidence intervals) .hidden[ $$\text{statistic} \pm \text{multiplier}\times\text{standard error} = \hat p \pm 2\sqrt{\frac{\hat p (1 - \hat p)}{n}}$$]
+
+- Interpretation: .hidden[We are 95% confident that the long run proportion of **(context)** falls between **(lower bound)** and **(upper bound)**.] 
+
+
+---
+## Proportions
+
+- Validity conditions: .red[10 observations in each category]
+
+- Standard error: $$\sqrt{\frac{\hat p (1 - \hat p)}{n}}$$
+
+- Confidence interval: (multiplier of 2 for 95% confidence intervals) $$\text{statistic} \pm \text{multiplier}\times\text{standard error} = \hat p \pm 2\sqrt{\frac{\hat p (1 - \hat p)}{n}}$$
+
+- Interpretation: .red[We are 95% confident that the long run proportion of **(context)** falls between **(lower bound)** and **(upper bound)**.] 
+
+
+---
+class:middle,center,inverse
+# 3.3: 2SD and Theory-based Confidence Intervals for a Single Mean
+
+
+---
+## Means
+
+- Validity conditions: .hidden[symmetric distribution OR <br/>20 observations + not strongly skewed distribution]
+
+- Standard error: .hidden[$$\frac{s}{\sqrt{n}}$$]
+
+- Confidence interval: (multiplier of 2 for 95% confidence intervals) .hidden[ $$\text{statistic} \pm \text{multiplier}\times\text{standard error} = \bar x \pm 2\frac{s}{\sqrt{n}}$$]
+
+- Interpretation: .hidden[We are 95% confident that the long run average of **(context)** falls between **(lower bound)** and **(upper bound)**.] 
+
+
+---
+## Means
+
+- Validity conditions: .red[symmetric distribution OR <br/>20 observations + not strongly skewed distribution]
+
+- Standard error: $$\frac{s}{\sqrt{n}}$$
+
+- Confidence interval: (multiplier of 2 for 95% confidence intervals) $$\text{statistic} \pm \text{multiplier}\times\text{standard error} = \bar x \pm 2\frac{s}{\sqrt{n}}$$
+
+- Interpretation: .red[We are 95% confident that the long run average of **(context)** falls between **(lower bound)** and **(upper bound)**.] 
+
+---
+## What affects the width of a CI
+
+- Confidence Level
+  - How often do we reject/fail to reject
+  - Lottery example
+  - In the formula as the .underline[.hidden[multiplier]]
+
+- Sample size
+  - As you know more about the .underline[.hidden[population]], you get closer to knowing the true parameter value
+  - Larger sample -> .underline[.hidden[smaller interval]]     
+  Smaller sample -> .underline[.hidden[larger interval]]
+
+- Standard error
+  - Reflects .underline[.hidden[the variability]] of different samples
+  - Highly variable (large SE) = harder to pin down what is "true"
+  - Makes sense that **large SEs** lead to .underline[.hidden[wider]] confidence intervals
+
+
+---
+## What affects the width of a CI
+
+- Confidence Level
+  - How often do we reject/fail to reject
+  - Lottery example
+  - In the formula as the .underline[.red[multiplier]]
+
+- Sample size
+  - As you know more about the .underline[.red[population]], you get closer to knowing the true parameter value
+  - Larger sample -> .underline[.red[smaller interval]]     
+  Smaller sample -> .underline[.red[larger interval]]
+
+- Standard error
+  - Reflects .underline[.red[the variability]] of different samples
+  - Highly variable (large SE) = harder to pin down what is "true"
+  - Makes sense that **large SEs** lead to .underline[.red[wider]] confidence intervals
+
+---
+## Conclusions about hypotheses
+
+- If the hypothesized mean is inside the interval
+  - value is plausible
+  - we would fail to reject $H_0$
+  - p-value would be greater than significance level
+
+- If the hypothesized mean is outside the interval
+  - value is **not** plausible
+  - reject $H_0$
+  - p-value would be less than significance level
+  
+---
+## Example - Textbook prices
+
+Two Cal Poly students gathered data on prices for a random sample of 30 textbooks from the campus bookstore. They found the average price was $65.02, and the standard deviation of prices was 
+$51.42.
+
+  
+---
+## Example - Textbook prices
+
+Two Cal Poly students gathered data on prices for a random sample of 30 textbooks from the campus bookstore. They found the average price was $65.02, and the standard deviation of prices was 
+$51.42.
+
+$\overline x = 65.02$
+
+$s = 51.42$
+
+$n = 30$
+
+\begin{align}\text{statistic} \pm \text{multiplier}\times\text{standard error} &= \bar x \pm 2 s/\sqrt{n} \\\\
+&= 65.02 \pm 2\times 51.42/\sqrt{30} \\\\
+&= 65.02 \pm 18.776 \\\\
+&= (46.24, 83.80)\end{align}
+
+---
+## Example - UNL Sleep Data
+
+A 2014 study of 66 UNL students found that on average, participants slept 5.9 hours the night before, with a sample standard deviation of 1.67. 
+
+Construct a confidence interval for the average hours all UNL students slept the night before. Is 7 a plausible value?
+
+
+---
+## Example - UNL Sleep Data
+
+A 2014 study of 66 UNL students found that on average, participants slept 5.9 hours the night before, with a sample standard deviation of 1.67. 
+
+Construct a confidence interval for the average hours all UNL students slept the night before. Is 7 a plausible value?
+
+.red[We are 95% confident that UNL students get, on average, between 5.49 and 6.31 hours of sleep per night. <br/><br/>7 is not a plausible value.]
+
+---
+## Example - Skittles
+
+A sample of 154 students were blindly given a single 
+**strawberry** Skittles candy to eat. They were told the 5 
+possible flavors and asked to identify the one they ate. 
+
+The responses were recorded as follows: 89 strawberry, 23 lime, 
+14 lemon, 17 orange, and 11 grape answer. 
+
+Find a 95% confidence interval for the parameter (wanting to see if 
+students get it right).
+
+
+---
+## Example - Body Temperature
+
+Normal body temperature is often reported to be $98.6 ^\circ F$. Is that number accurate? Data from 65 healthy females between 18 and 40 years old was collected, and the mean body temperature was  $98.39^\circ F$ with a standard deviation of $1.2$. Construct a 95% confidence interval for the parameter.
+
+---
+## Example - College students
+
+A random sample of 97 male college students found that 12 students were left-handed, and the average height was 5.9 feet with a standard deviation of 0.75 feet. Find a 99% confidence interval for the proportion of all male college students that are left-handed.
+
+---
+class:center,middle,inverse
+# 3.4: Factors That Affect the Width of a Confidence Interval
+
+---
+
+What happens | Background Information | Wider or narrower?
+------------ | ---------------------- | -------------------
+Confidence level goes up<br/>Significance level goes down<br/> | <br/><br/><br/> | 
+Confidence level goes down<br/>significance level goes up<br/> | <br/><br/><br/> |
+Sample size goes up | <br/><br/><br/> |  
+Sample size goes down | <br/><br/><br/> | 
+Sample standard deviation increases | <br/><br/><br/> | 
+Sample standard deviation decreases | <br/><br/><br/> |
+
+---
+
+
+What happens | Reject or Fail to Reject? | p-value is...
+------------ | ---------------------- | -------------------
+$H_0$ value <br/>inside the interval | <br/><br/><br/><br/><br/><br/> | .hidden[something here to force more room]
+$H_0$ value <br/>outside the interval | <br/><br/><br/><br/><br/><br/> |
+
+---
+## Confidence Intervals
+
+- Width of a CI is affected by 
+  - Sample size (via standard error calculation)
+  
+  - Sample standard deviation (mean) or sample proportion (via standard error calculation)
+  
+  - Confidence level (via multiplier)
+  
+- **Focus**: What does the confidence level actually mean?
+
+---
+## Exploration 3.4B
+What does it mean to be 95% or 99% confident?
+
+.toprightfig[![Reeses pieces candy](figure/reeses.jpg)]
+
+- Reeses candies come in orange, yellow, and brown
+
+- We want to estimate the long-run proportion of orange candies
+
+- **assuming** for now that this proportion, $\pi$, is 0.50
+
+***
+
+- **Question 1** - If you take a sample of 100 Reese's Pieces candies and find the sample proportion of orange, is there any guarantee that the sample proportion will equal 0.50? <br/><br/><br/>
+
+- **Question 2** - Suppose we calculate a confidence interval from this sample proportion. Is there any guarantee that the interval will contain the value 0.50?
+
+---
+## Exploration 3.4B
+
+.toprightfig[![Reeses pieces candy](figure/reeses.jpg)]
+
+- **Question 3** - Suppose that you select another random sample of 100 Reese's pieces candies. Is there any guarantee that the sample proportion will be the same as for the first sample? Will the confidence interval based on the new sample necessarily be the same as the confidence interval based on the first sample? How do you think they will differ?
+
+---
+## Exploration 3.4B
+
+.toprightfig[![Reeses pieces candy](figure/reeses.jpg)]
+
+- **Question 4**: Simulating Confidence Interval Applet
+  - Find one sample and the confidence interval
+  - Record sample proportion, lower bound, and upper bound
+  - Is the sample proportion in the interval?
+  - Is the long-run proportion in the interval?
+
+- **Question 5**: More sampling...
+  - Simulate 99 more samples and intervals
+  - At what value is the graph centered?
+  - Click red dot, answer questions
+  - Click green dot, answer questions
+  - Watch what happens to the running total as the sample value goes up
+  
+- **Question 6**: What happens with 90% intervals? 99% intervals?
+
+---
+## Confidence Intervals
+
+- We can take lots of samples... say, 100
+
+- For each sample, find the 95% confidence interval
+
+- We expect 95 of the 100 intervals will contain the true parameter
+
+- This does **NOT** mean the probability that the true parameter is in the confidence interval is 0.95.
+
